fixing z-index

--- a/curriculum/tools/main.css
+++ b/curriculum/tools/main.css
@@ -10,6 +10,7 @@ img#mockup{
     width: 70%;
     position: absolute;
     left: 20%;
+    z-index: 1;
 }
 /*all the stuff on the side bar*/
 #sidebar{
@@ -25,6 +26,7 @@ img#logo{
     position: absolute;
     left: 11%;
     top: 3%;
+    z-index: 3;
 }
 img#puzzle{
     position: absolute;
